# proteus

./: README.md  pyproject.toml
src/proteus/: __init__.py  cli.py
