[project]
name = "proteus"
version = "0.1.0"
description = "Shape-shifting video converter — transform formats and compress with ease"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
proteus = "proteus.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proteus"]

[tool.uv]
dev-dependencies = []
